# satp-gateway

./: .gitignore
gateway/: Cargo.toml  build.rs
gateway-client/: Cargo.toml
gateway/config/: Dummy_Gateway.toml  Dummy_Gateway2.toml  Settings.toml
gateway/src/: error.rs  main.rs
gateway/src/services/: asset_transfer_service.rs  helpers.rs  mod.rs
protos/: buf.gen.yaml  buf.yaml  gateway.proto
protos-rs/: Cargo.toml  README.md  build.rs
protos-rs/pkg/: Cargo.toml
protos-rs/pkg/src/: lib.rs
protos/common/: ack.proto
protos/gateway/: assettransfer.proto
proxy-server/: descriptor_set.pb  envoy.yaml  run-proxy.sh
