[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
tokio = { version = "1.19.2", features = ["macros", "fs", "rt", "rt-multi-thread", "sync"] }
tonic = "0.9.2"
serde = {version="1.0.159", features = ["derive"]}
serde_json = "1.0.95"
sled = "0.34.7"
bincode = "1.3.3"
reqwest = { version = "0.11.16", features = ["json"] }
config = "0.11.0"
satp_protos_rs = "0.1.1"

[build-dependencies]
tonic-build = "0.9.2"
