[package]
name = "satp_protos_rs"
version = "0.1.0"
edition = "2018"
authors = ["Zakwan Jaroucheh <zakwanj@gmail.com>"]
license = "Apache-2.0"
description = "Rust compiled SATP protobuf package"
documentation = "https://github.com/outsidethecode/satp-gateway"
repository = "https://github.com/outsidethecode/satp-gateway"
readme = "README.md"
keywords = ["satp"]

[lib]
name = "satp"
path = "src/lib.rs"

[dependencies]
tonic = {version="0.8.3",  features = ["tls"]}
prost = "0.11.8"
serde = {version="1.0.159", features = ["derive"]}